# AgentAlign-Lab

./: .gitignore  AGENTALIGN_COMPLETE_REFERENCE.md  README.md  pyproject.toml  test_day1.py
configs/: agent.yaml  dpo_qwen15_lora.yaml  eval.yaml
docs/: BEGINNER_TECHNICAL_INTERVIEW_GUIDE.md
practice/: cwd_demo.py  pathlib_demo.py  practice_pydantic.py  subprocess_demo.py  task_schema.py  test_loader.py  test_real_schema.py  test_verifier.py  test_workspace.py
practice/practice/: temp_workspace.py
report/: paper.md
scripts/: 01_generate_tasks.py  02_run_agent.py  03_score_trajectories.py  04_build_preferences.py  05_train_dpo.py  06_eval_models.py  07_launch_dashboard.py  08_audit_mvp.py  09_prepare_gpu_handoff.py  10_import_colab_artifacts.py
src/agentalign/: __init__.py  loader.py  schemas.py  verifier.py  workspace.py
src/agentalign/agent/: __init__.py  loop.py  parser.py  prompts.py  sandbox.py  tools.py
src/agentalign/dashboard/: __init__.py  app.py
src/agentalign/data/: __init__.py  preferences.py  trajectories.py
src/agentalign/eval/: __init__.py  failure_labels.py  metrics.py  run.py
src/agentalign/tasks/: __init__.py  generate.py  load.py  templates.py  workspace.py
src/agentalign/train/: __init__.py  dpo.py  sft.py
src/agentalign/verifier/: __init__.py  checks.py  runner.py  safety.py  score.py
tests/: test_family_verifiers.py  test_parser.py  test_preferences.py  test_schemas.py  test_verifier.py
