[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentalign-lab"
version = "0.1.0"
description = "A laboratory for aligning agents through preference learning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AgentAlign Team" }
]
keywords = ["alignment", "preference-learning", "dpo", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
]
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.0",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentalign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["agentalign"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.urls]
Repository = "https://github.com/yourorg/agentalign-lab"
